[package]
name = "react-native-demo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["stdout"]
stdout = []

[dependencies]
async-stream = "0.3.3"
chrono = { version = "0.4.22", features = ['serde'] }
cookie = "0.16.1"
dotenv = "0.15.0"
futures = "0.3.24"
futures-util = "0.3.24"
http = "0.2.8"
hyper = "0.14.20"
lapin = "2.1.1"
lazy_static = "1.4.0"
mime = "0.3.16"
prost = "0.11.0"
r2d2 = "0.8.10"
redis = { version = "0.21.6", features = [ "r2d2", "tokio-comp", "connection-manager", "aio" ]}
reqwest = "0.11.12"
rmp = "0.8.11"
rmp-serde = "1.1.1"
sentry = "0.27.0"
sentry-backtrace = "0.27.0"
sentry-core = "0.27.0"
sentry-tracing = "0.27.0"
serde = { version = "1.0.145", features = ['derive']}
serde_json = "1.0.85"
thiserror = "1.0.37"
time = "0.3.15"
tokio = { version = "1.21.2", features = ['full']}
tokio-amqp = "2.0.0"
tokio-stream = "0.1.10"
tonic = { version = "0.8.2", features = ['prost', 'tls']}
tonic-health = "0.7.1"
tower = "0.4.13"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = { version = "0.3.3", default-features = false }
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ['env-filter']}
uuid = { version = "1.1.2", features = ['serde', 'v4']}
validator = { version = "0.16.0", features = ['derive']}

[dev-dependencies]
fakeit = "1.1.1"

[build-dependencies]
tonic-build = "0.8.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"
